--- a/index.html
+++ b/index.html
@@ -1,6 +1,179 @@
-<!DOCTYPE html>
-<html>
+<?php
+require 'config/function.php';
+?>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>POS System
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  </head>
   <body>
-<h1>My Page Migami</h1>
-  </body>
-</html>
+  
+
+  <nav class="navbar fixed-top navbar-expand-lg bg-light shadow">
+  <div class="container ">
+    <a class="navbar-brand h1" href="index.php">
+        My Portfolio
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav d-flex mb-2 mb-lg-0">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#about">About</a>
+          </li class="text-white">
+          <a class="nav-link active" aria-current="page" href="#stacks">stacks</a>
+        </li class="text-white">
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#project">Projects</a>
+        </li class="text-white">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#contact">Contact</a>
+          </li class="text-white">
+      </ul>
+    </div>
+  </div>
+</nav>
+
+</section>
+
+<!-- adver -->
+ <section style="background:url('assets/images/gadget.jpg')no-repeat;
+ background-size:cover;
+ height:90vh;
+ width:100%;" class="py-5">
+      <div class="container text-white py-5">
+          <div class="row py-5">
+              <div class="col-lg-6 py-5">
+                  <h1 class="fw-bold py-5">Marlou Linsey</h1>
+                  <h6>Junior Web Developer</h6>
+                  <p>I have developed many types of Web Base System/Site</p>
+              </div>
+          </div>
+      </div>
+ </section>
+
+<!-- Categories -->
+<section id="about">
+    <div class="container py-5">
+        <div class="row py-5">
+            <div class="col-lg-7 m-auto">
+                <div class="row text-center">
+                    <h2 class="pb-3 fw-bold">About</h2>
+                    <p>Hey, my name is Marlou Linsey and I use Migami dev as my nickname across social medias. I’m a front-end & back-end web developer from Philipines. I’m also a Self-taugh and always curious to learn more when it comes to new technologies and creative coding.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Product section -->
+<section id="stacks">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-5 m-auto text-center">
+                <h2 class="fw-bold pb-2">Scripting Languege</h2>
+
+       <h6>CSS (Bootstrap)</h6>
+       <h6>HTML</h6>
+       <h6>PHP (Vanilla PHP, Laravel)</h6>
+       <h6>JavaScript (Vanilla JS, NodeJS, ReactJS, ExpressJS, JQuery, AJAX)</h6>
+       <h6>C# (asp.net, Web API, EF, fluent API)</h6>
+       <h6>MSSQL</h6>
+       <h6>MYSQL</h6>
+       <h6>MongoDB</h6>
+       </div>
+        </div>
+    </div>
+</section>
+
+<!-- About Section -->
+ <section id="project">
+    <div class="container py-5">
+        <div class="row py-5">
+            <div class="col-lg-8 m-auto text-center">
+                <h2 class="fw-bold">Projects</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <img src="3.png"" alt="" class="img-fluid">
+                <h5>Dating Site</h5>
+                <p>Stacks: HTML, CSS, Vanilla PHP, JQuery, MYSQL
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img src="2.png" alt="" class="img-fluid">
+                <h5>Ecommerce</h5>
+                <p>Stacks: HTML, CSS, Vanilla PHP, JQuery, MYSQL
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img src="1.png" alt="" class="img-fluid">
+                <h5>Herbs Blogs</h5>
+                <p>Stacks: HTML, CSS,MERN(MongoDB,ExpressJS,ReactJS,NodeJS)
+                </p>
+            </div>
+        </div>
+    </div>
+ </section>
+
+
+
+   <!-- contact -->
+    <section id="contact" class="py-5">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-5 m-auto text-center">
+                    <h2 class="fw-bold">Contact Us</h2>
+                    <h6 style="color:red;">Always Be In Touch With Us</h6>
+                    <br>
+                </div>
+            </div>
+            <div class="row py-5">
+                <div class="col-lg-9 m-auto">
+                        <div class="col-lg-4">
+                            <h6>LOCATION</h6>
+                            <p>BLOCK 110 LOT 21 Paliparan 3 Dasmarinas Cavite</p>
+
+                            <h6>PHONE</h6>
+                            <p>09937626564</p>
+
+                            <h6>EMAIL</h6>
+                            <p>marlou.linsey.0@gmail.com</p>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+<footer>
+    <div class="container py-5">
+
+      <p class="text-center">Copyright ©2024 All rights reserved</p>
+    </div>
+  </footer>
+  
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+          <!-- jsPDF CDN -->
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKNRRhy5X5AAOnx5S09ydFYWWNSfcEqDTTHgtNA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+          <!-- jsPDF CDN end -->
+          <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
+          <script src="assets/js/custom.js"></script>
+    </body>
+  </html>
