--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ require 'config/function.php';
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>POS System
+    <title>My Portfolio
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,7 +48,7 @@ require 'config/function.php';
 </section>
 
 <!-- adver -->
- <section style="background:url('assets/images/gadget.jpg')no-repeat;
+ <section style="background:url('gadget.jpg')no-repeat;
  background-size:cover;
  height:90vh;
  width:100%;" class="py-5">
