--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ require 'config/function.php';
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio
+    <title>POS System
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   </head>
   <body>
@@ -30,16 +30,20 @@ require 'config/function.php';
       <ul class="navbar-nav d-flex mb-2 mb-lg-0">
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#about">About</a>
-          </li class="text-white">
-          <a class="nav-link active" aria-current="page" href="#stacks">stacks</a>
-        </li class="text-white">
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#certificate">Certificate</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#stacks">Stacks</a>
+        </li>
 
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#project">Projects</a>
-        </li class="text-white">
+        </li>
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#contact">Contact</a>
-          </li class="text-white">
+          </li>
       </ul>
     </div>
   </div>
@@ -48,7 +52,7 @@ require 'config/function.php';
 </section>
 
 <!-- adver -->
- <section style="background:url('gadget.jpg')no-repeat;
+ <section style="background:url('assets/images/gadget.jpg')no-repeat;
  background-size:cover;
  height:90vh;
  width:100%;" class="py-5">
@@ -63,7 +67,7 @@ require 'config/function.php';
       </div>
  </section>
 
-<!-- Categories -->
+<!-- about -->
 <section id="about">
     <div class="container py-5">
         <div class="row py-5">
@@ -77,7 +81,27 @@ require 'config/function.php';
     </div>
 </section>
 
-<!-- Product section -->
+<!-- cert -->
+ <!-- About Section -->
+ <section id="certificate">
+    <div class="container py-5">
+        <div class="row py-5">
+            <div class="col-lg-8 m-auto text-center">
+                <h2 class="fw-bold">Certificate</h2>
+            </div>
+        </div>
+        <div class="row text-center mb-4">
+                <img src="assets/images/cert1.png"" alt="" class="img-fluid">
+                <h5>FreeCodeCamp - Responsive Web Design</h5>
+        </div>
+        <div class="row text-center mb-4">
+            <img src="assets/images/cert.png"" alt="" class="img-fluid">
+            <h5>FreeCodeCamp - JavaScript Algorithms and Data Structure (Bete)</h5>
+    </div>
+    </div>
+ </section>
+
+<!-- stack section -->
 <section id="stacks">
     <div class="container">
         <div class="row">
@@ -107,19 +131,19 @@ require 'config/function.php';
         </div>
         <div class="row">
             <div class="col-lg-4">
-                <img src="3.png"" alt="" class="img-fluid">
+                <img src="assets/images/3.png"" alt="" class="img-fluid">
                 <h5>Dating Site</h5>
                 <p>Stacks: HTML, CSS, Vanilla PHP, JQuery, MYSQL
                 </p>
             </div>
             <div class="col-lg-4">
-                <img src="2.png" alt="" class="img-fluid">
+                <img src="assets/images/2.png" alt="" class="img-fluid">
                 <h5>Ecommerce</h5>
                 <p>Stacks: HTML, CSS, Vanilla PHP, JQuery, MYSQL
                 </p>
             </div>
             <div class="col-lg-4">
-                <img src="1.png" alt="" class="img-fluid">
+                <img src="assets/images/1.png" alt="" class="img-fluid">
                 <h5>Herbs Blogs</h5>
                 <p>Stacks: HTML, CSS,MERN(MongoDB,ExpressJS,ReactJS,NodeJS)
                 </p>
