--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ require 'config/function.php';
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="custom.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   </head>
   <body>
@@ -52,7 +52,7 @@ require 'config/function.php';
 </section>
 
 <!-- adver -->
- <section style="background:url('assets/images/gadget.jpg')no-repeat;
+ <section style="background:url('gadget.jpg')no-repeat;
  background-size:cover;
  height:90vh;
  width:100%;" class="py-5">
@@ -91,11 +91,11 @@ require 'config/function.php';
             </div>
         </div>
         <div class="row text-center mb-4">
-                <img src="assets/images/cert1.png"" alt="" class="img-fluid">
+                <img src="cert1.png"" alt="" class="img-fluid">
                 <h5>FreeCodeCamp - Responsive Web Design</h5>
         </div>
         <div class="row text-center mb-4">
-            <img src="assets/images/cert.png"" alt="" class="img-fluid">
+            <img src="images/cert.png"" alt="" class="img-fluid">
             <h5>FreeCodeCamp - JavaScript Algorithms and Data Structure (Bete)</h5>
     </div>
     </div>
@@ -131,19 +131,19 @@ require 'config/function.php';
         </div>
         <div class="row">
             <div class="col-lg-4">
-                <img src="assets/images/3.png"" alt="" class="img-fluid">
+                <img src="3.png"" alt="" class="img-fluid">
                 <h5>Dating Site</h5>
                 <p>Stacks: HTML, CSS, Vanilla PHP, JQuery, MYSQL
                 </p>
             </div>
             <div class="col-lg-4">
-                <img src="assets/images/2.png" alt="" class="img-fluid">
+                <img src="2.png" alt="" class="img-fluid">
                 <h5>Ecommerce</h5>
                 <p>Stacks: HTML, CSS, Vanilla PHP, JQuery, MYSQL
                 </p>
             </div>
             <div class="col-lg-4">
-                <img src="assets/images/1.png" alt="" class="img-fluid">
+                <img src="1.png" alt="" class="img-fluid">
                 <h5>Herbs Blogs</h5>
                 <p>Stacks: HTML, CSS,MERN(MongoDB,ExpressJS,ReactJS,NodeJS)
                 </p>
