--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ require 'config/function.php';
                 <h5>FreeCodeCamp - Responsive Web Design</h5>
         </div>
         <div class="row text-center mb-4">
-            <img src="images/cert.png"" alt="" class="img-fluid">
+            <img src="cert.png"" alt="" class="img-fluid">
             <h5>FreeCodeCamp - JavaScript Algorithms and Data Structure (Bete)</h5>
     </div>
     </div>
