--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ require 'config/function.php';
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>POS System
+    <title>My Portfolio
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,7 +96,7 @@ require 'config/function.php';
         </div>
         <div class="row text-center mb-4">
             <img src="cert.png"" alt="" class="img-fluid">
-            <h5>FreeCodeCamp - JavaScript Algorithms and Data Structure (Bete)</h5>
+            <h5>FreeCodeCamp - JavaScript Algorithms and Data Structures (Beta)</h5>
     </div>
     </div>
  </section>
