--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ require 'config/function.php';
             <div class="col-lg-5 m-auto text-center">
                 <h2 class="fw-bold pb-2">Scripting Languege</h2>
 
-       <h6>CSS (Bootstrap)</h6>
+       <h6>CSS (Tailwind, Bootstrap)</h6>
        <h6>HTML</h6>
        <h6>PHP (Vanilla PHP, Laravel)</h6>
        <h6>JavaScript (Vanilla JS, NodeJS, ReactJS, ExpressJS, JQuery, AJAX)</h6>
