--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ require 'config/function.php';
       <div class="container text-white py-5">
           <div class="row py-5">
               <div class="col-lg-6 py-5">
-                  <h1 class="fw-bold py-5">Marlou Linsey</h1>
-                  <h6 class="a01 letter">Web Developer</h6>
+                  <h1 class="fw-bold py-5 a01 letter"">Marlou Linsey</h1>
+                  <h6>Web Developer</h6>
                   <p>I have developed many types of Web Base System/Site</p>
               </div>
           </div>
