--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ require 'config/function.php';
         <div class="row py-5">
             <div class="col-lg-7 m-auto">
                 <div class="row text-center">
-                    <h2 class="pb-3 fw-bold">About</h2>
+                    <h2 class="pb-3 fw-bold a01 letter">About</h2>
                     <p>Hey, my name is Marlou Linsey and I use Migami dev as my nickname across social medias. I’m a front-end & back-end web developer from Philipines. I’m also a Self-taugh and always curious to learn more when it comes to new technologies and creative coding.</p>
                 </div>
             </div>
@@ -87,7 +87,7 @@ require 'config/function.php';
     <div class="container py-5">
         <div class="row py-5">
             <div class="col-lg-8 m-auto text-center">
-                <h2 class="fw-bold">Certificate</h2>
+                <h2 class="fw-bold a01 letter">Certificate</h2>
             </div>
         </div>
         <div class="row text-center mb-4">
@@ -106,7 +106,7 @@ require 'config/function.php';
     <div class="container">
         <div class="row">
             <div class="col-lg-5 m-auto text-center">
-                <h2 class="fw-bold pb-2">Scripting Languege</h2>
+                <h2 class="fw-bold pb-2 a01 letter">Scripting Languege</h2>
 
        <h6>CSS (Tailwind, Bootstrap)</h6>
        <h6>HTML</h6>
@@ -126,7 +126,7 @@ require 'config/function.php';
     <div class="container py-5">
         <div class="row py-5">
             <div class="col-lg-8 m-auto text-center">
-                <h2 class="fw-bold">Projects</h2>
+                <h2 class="fw-bold a01 letter">Projects</h2>
             </div>
         </div>
         <div class="row">
@@ -159,7 +159,7 @@ require 'config/function.php';
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-5 m-auto text-center">
-                    <h2 class="fw-bold">Contact Us</h2>
+                    <h2 class="fw-bold a01 letter">Contact Us</h2>
                     <h6 style="color:red;">Always Be In Touch With Us</h6>
                     <br>
                 </div>
