--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ require 'config/function.php';
     <div class="container py-5">
         <div class="row py-5">
             <div class="col-lg-8 m-auto text-center">
-                <h2 class="fw-bold a01 letter">Certificate</h2>
+                <h2 class="fw-bold a02 letter2">Certificate</h2>
             </div>
         </div>
         <div class="row text-center mb-4">
