--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ const observer = new IntersectionObserver(entries => {
   });
 });
 
-observer.observe(document.querySelector('.letter'));
+observer.observe(document.querySelector('.a01'));
   </script>
     </body>
   </html>
