--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ require 'config/function.php';
       <div class="container text-white py-5">
           <div class="row py-5">
               <div class="col-lg-6 py-5">
+                <div class="box">
                   <h1 class="fw-bold py-5 a01 letter">Marlou Linsey</h1>
+                </div>
                   <h6>Web Developer</h6>
                   <p>I have developed many types of Web Base System/Site</p>
               </div>
@@ -73,7 +75,9 @@ require 'config/function.php';
         <div class="row py-5">
             <div class="col-lg-7 m-auto">
                 <div class="row text-center">
+                  <div class="box">
                     <h2 class="pb-3 fw-bold a01 letter">About</h2>
+                  </div>
                     <p>Hey, my name is Marlou Linsey and I use Migami dev as my nickname across social medias. I’m a front-end & back-end web developer from Philipines. I’m also a Self-taugh and always curious to learn more when it comes to new technologies and creative coding.</p>
                 </div>
             </div>
