--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ const observer = new IntersectionObserver(entries => {
   });
 });
 
-observer.observe(document.querySelector('.a01'));
+observer.observe(document.querySelector('.box'));
   </script>
     </body>
   </html>
