--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@ require 'config/function.php';
     <div class="container py-5">
         <div class="row py-5">
             <div class="col-lg-8 m-auto text-center">
-                <h2 class="fw-bold a02 letter2">Certificate</h2>
+              <div class="box">
+                <h2 class="fw-bold a01 letter">Certificate</h2>
+                </div>
             </div>
         </div>
         <div class="row text-center mb-4">
@@ -110,8 +112,9 @@ require 'config/function.php';
     <div class="container">
         <div class="row">
             <div class="col-lg-5 m-auto text-center">
+              <div class="box">
                 <h2 class="fw-bold pb-2 a01 letter">Scripting Languege</h2>
-
+              </div>
        <h6>CSS (Tailwind, Bootstrap)</h6>
        <h6>HTML</h6>
        <h6>PHP (Vanilla PHP, Laravel)</h6>
@@ -130,7 +133,9 @@ require 'config/function.php';
     <div class="container py-5">
         <div class="row py-5">
             <div class="col-lg-8 m-auto text-center">
+              <div class="box">
                 <h2 class="fw-bold a01 letter">Projects</h2>
+              </div>
             </div>
         </div>
         <div class="row">
@@ -163,7 +168,9 @@ require 'config/function.php';
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-5 m-auto text-center">
+                  <div class="box">
                     <h2 class="fw-bold a01 letter">Contact Us</h2>
+                  </div>
                     <h6 style="color:red;">Always Be In Touch With Us</h6>
                     <br>
                 </div>
