--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ require 'config/function.php';
       <div class="container text-white py-5">
           <div class="row py-5">
               <div class="col-lg-6 py-5">
-                <div class="box">
+<!--                 <div class="box"> -->
                   <h1 class="fw-bold py-5 a01 letter">Marlou Linsey</h1>
-                </div>
+<!--                 </div> -->
                   <h6>Web Developer</h6>
                   <p>I have developed many types of Web Base System/Site</p>
               </div>
