--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ require 'config/function.php';
 
   <nav class="navbar fixed-top navbar-expand-lg bg-light shadow">
   <div class="container ">
-    <a class="navbar-brand h1" href="index.php">
+    <a class="navbar-brand h1" href="index.html">
         My Portfolio
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@ require 'config/function.php';
 </section>
 
 <!-- adver -->
- <section style="background:url('images/gadget.jpg')no-repeat;
+ <section style="background:url('gadget.jpg')no-repeat;
  background-size:cover;
  height:90vh;
  width:100%;" class="py-5">
