--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="row text-center mb-4">
           <div class="boxxx-wrapper1">
             <div class="boxxx1 boxxx-transition1">
-                <img src="assets/images/cert1.png" alt="" class="img-fluid ">
+                <img src="cert1.png" alt="" class="img-fluid ">
         
                 <h5>FreeCodeCamp - Responsive Web Design</h5>
                 </div>
@@ -107,7 +107,7 @@
         <div class="row text-center mb-4">
           <div class="boxxx-wrapper2">
             <div class="boxxx2 boxxx-transition2">
-            <img src="assets/images/cert.png"" alt="" class="img-fluid">
+            <img src="cert.png"" alt="" class="img-fluid">
             <h5>FreeCodeCamp - JavaScript Algorithms and Data Structures (Beta)</h5>
             </div>
             </div>
@@ -115,7 +115,7 @@
     <div class="row text-center mb-4">
       <div class="boxxx-wrapper3">
         <div class="boxxx3 boxxx-transition3">
-            <img src="assets/images/cert2.jpg" alt="" class="img-fluid ">
+            <img src="cert2.jpg" alt="" class="img-fluid ">
     
             <h5>Udemy - VueJS Course</h5>
             </div>
@@ -183,7 +183,7 @@
             <div class="col-lg-4">
               <div class="boxxx-wrapper4">
                 <div class="boxxx4 boxxx-transition4">
-                <img src="assets/images/3.png"" alt="" class="img-fluid">
+                <img src="/3.png"" alt="" class="img-fluid">
                 </div>
                 </div>
                 <h5>Dating Site</h5>
@@ -193,7 +193,7 @@
             <div class="col-lg-4">
               <div class="boxxx-wrapper5">
                 <div class="boxxx5 boxxx-transition5">
-                <img src="assets/images/2.png" alt="" class="img-fluid">
+                <img src="2.png" alt="" class="img-fluid">
                 </div>
                 </div>
                 <h5>Ecommerce</h5>
@@ -203,7 +203,7 @@
             <div class="col-lg-4">
               <div class="boxxx-wrapper6">
                 <div class="boxxx6 boxxx-transition6">
-                <img src="assets/images/1.png" alt="" class="square square-transition img-fluid">
+                <img src="1.png" alt="" class="square square-transition img-fluid">
                 </div>
                 </div>
                 <h5>Herbs Blogs</h5>
