--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-6">
               <div class="boxxx-wrapper4">
                 <div class="boxxx4 boxxx-transition4">
                 <img src="/3.png"" alt="" class="img-fluid">
@@ -189,8 +189,8 @@
                 <h5>Dating Site</h5>
                 <p>Stacks: HTML, CSS, Vanilla PHP, JQuery, MYSQL
                 </p>
-            </div>
-            <div class="col-lg-4">
+            </div><br>
+            <div class="col-lg-6">
               <div class="boxxx-wrapper5">
                 <div class="boxxx5 boxxx-transition5">
                 <img src="2.png" alt="" class="img-fluid">
@@ -199,8 +199,8 @@
                 <h5>Ecommerce</h5>
                 <p>Stacks: HTML, CSS, Vanilla PHP, JQuery, MYSQL
                 </p>
-            </div>
-            <div class="col-lg-4">
+            </div><br>
+            <div class="col-lg-6">
               <div class="boxxx-wrapper6">
                 <div class="boxxx6 boxxx-transition6">
                 <img src="1.png" alt="" class="square square-transition img-fluid">
@@ -209,7 +209,7 @@
                 <h5>Herbs Blogs</h5>
                 <p>Stacks: HTML, CSS,MERN(MongoDB,ExpressJS,ReactJS,NodeJS)
                 </p>
-            </div>
+            </div><br>
         </div>
     </div>
  </section>
