--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
         <div class="boxx-wrapper2">
           <div class="boxx2 boxx-transition2">
-       <h6>CSS (Bootstrap)</h6>
+       <h6>CSS (Tailwind, Bootstrap)</h6>
        </div>
        </div>
        <div class="boxx-wrapper3">
